Session time is now taken from assertion, fixed incorrect sanity check for strings

--- a/src/main/Okta.Aws.Cli/Properties/launchSettings.json
+++ b/src/main/Okta.Aws.Cli/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     },
     "Okta.Aws.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "configure",
+      "commandLineArgs": "run",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
