fixed version logging

--- a/src/main/Installer/Installer.csproj
+++ b/src/main/Installer/Installer.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Kurukuru" Version="1.4.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="app.manifest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
