--- a/src/main/Okta.Aws.Cli/Okta.Aws.Cli.csproj
+++ b/src/main/Okta.Aws.Cli/Okta.Aws.Cli.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.1.112" />
     <PackageReference Include="Figgle" Version="0.4.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
+    <PackageReference Include="Kurukuru" Version="1.4.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Okta.Auth.Sdk" Version="2.0.4" />
@@ -22,6 +23,10 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="GitHub\Abstractions\" />
   </ItemGroup>
 
 </Project>
