added debug flag + some spinning action

--- a/src/main/Okta.Aws.Cli/Properties/launchSettings.json
+++ b/src/main/Okta.Aws.Cli/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     },
     "Okta.Aws.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "run",
+      "commandLineArgs": "--version",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
