--- a/src/main/Installer/Installer.csproj
+++ b/src/main/Installer/Installer.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Kurukuru" Version="1.4.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
