added reset handler

--- a/src/main/Installer/Properties/launchSettings.json
+++ b/src/main/Installer/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Installer": {
-      "commandName": "Project",
-      "commandLineArgs": "--path \"test\""
+      "commandName": "Project"
     }
   }
 }
