--- a/src/main/Okta.Aws.Cli/Properties/launchSettings.json
+++ b/src/main/Okta.Aws.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Okta.Aws.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "run",
+      "commandLineArgs": "reset",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
