--- a/src/main/Installer/Installer.csproj
+++ b/src/main/Installer/Installer.csproj
@@ -20,4 +20,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Abstractions\Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
