--- a/src/main/Okta.Aws.Cli/Okta.Aws.Cli.csproj
+++ b/src/main/Okta.Aws.Cli/Okta.Aws.Cli.csproj
@@ -2,15 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <AssemblyName>okta-aws-cli</AssemblyName>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.IdentityManagement" Version="3.7.2.172" />
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.1.112" />
+    <PackageReference Include="Cocona" Version="2.2.0" />
     <PackageReference Include="Figgle" Version="0.4.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     <PackageReference Include="Kurukuru" Version="1.4.2" />
@@ -35,6 +36,10 @@
   <ItemGroup>
     <Folder Include="Aws\ArnMappings\" />
     <Folder Include="GitHub\Abstractions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Abstractions\Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
